--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,7 @@
 appname: "logcount"
 entrypoints:
   celery:
-    cmd: "celery multi start 2 -A log.logdeal -c 10 -l warning"
+      cmd: "celery multi start 2 -A log.logdeal -c 10 -l warning --pidfile=/mnt/mfs/logs/eru/logcount/permdir/%N.pid --logfile=/mnt/mfs/logs/eru/logcount/permdir/%N.log"
   command:
     cmd: "python main.py"
   web:
